tests/src/frontend/typechecking/invalid/overridable_const4.sk
base class Foo {
  const x: Int = 42;
}

base class Bar {
  const x: Int = 32;
}

class Baz() extends Foo, Bar
